Oops, something wrong in readme

--- a/TheHands.nuspec
+++ b/TheHands.nuspec
@@ -6,10 +6,10 @@
     <title>TheHands</title>
     <authors>Quellatalo Nin</authors>
     <owners>Quellatalo Nin</owners>
-    <projectUrl>http://quellatalo.net/Coding/TheHands</projectUrl>
+    <projectUrl>https://github.com/quellatalo/TheHands</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>This TheHands library provides methods to send Windows Inputs such as Mouse inputs and Keyboard inputs. A part of alternative tools to sikulix.</description>
-    <releaseNotes>Added Intellisense support.</releaseNotes>
+    <releaseNotes>Moved to github.</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>sikuli sikulix macro test automation windows mouse keyboard input</tags>
   </metadata>
