--- a/TheHands.nuspec
+++ b/TheHands.nuspec
@@ -9,7 +9,7 @@
     <projectUrl>https://github.com/quellatalo/TheHands</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>This TheHands library provides methods to send Windows Inputs such as Mouse inputs and Keyboard inputs. A part of alternative tools to sikulix.</description>
-    <releaseNotes>Moved to github.</releaseNotes>
+    <releaseNotes>Make static uses obsolete. Recommend using instances.</releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>sikuli sikulix macro test automation windows mouse keyboard input</tags>
   </metadata>
