--- a/TheHands.nuspec
+++ b/TheHands.nuspec
@@ -8,11 +8,11 @@
     <owners>Quellatalo Nin</owners>
     <projectUrl>https://github.com/quellatalo/TheHands</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>This TheHands library provides methods to send Windows Inputs such as Mouse inputs and Keyboard inputs. A part of alternative tools to sikulix.</description>
+    <description>This TheHands library provides methods to send Windows Inputs such as Mouse inputs and Keyboard inputs.</description>
     <releaseNotes>
-+ Namespace typo （╯°□°）╯︵ ┻┻
-+ Remove obsolete items</releaseNotes>
++ Supports wheel control.
++ Various minor improvements.</releaseNotes>
     <copyright>Copyright 2017</copyright>
-    <tags>sikuli sikulix macro test automation windows mouse keyboard input</tags>
+    <tags>macro test automation windows mouse keyboard input rpa</tags>
   </metadata>
 </package>
